--- a/src/app/main/main.page.html
+++ b/src/app/main/main.page.html
@@ -1,47 +1,8 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <div class="flex items-center justify-between px-4 py-2">
-      <div class="flex items-center space-x-3">
-        <div class="w-8 h-8 rounded-full flex items-center justify-center" style="background-color: var(--ion-color-primary);">
-          <ion-icon name="home-outline" class="text-lg"></ion-icon>
-        </div>
-        <h1 class="font-bold text-xl tracking-wide">Mi App</h1>
-      </div>
-
-      <div class="flex items-center space-x-3">
-        <ion-button fill="clear" size="small">
-          <ion-icon name="notifications-outline" slot="icon-only"></ion-icon>
-        </ion-button>
-        <ion-button fill="clear" size="small">
-          <ion-icon name="settings-outline" slot="icon-only"></ion-icon>
-        </ion-button>
-      </div>
-    </div>
-  </ion-toolbar>
-</ion-header>
+<app-header></app-header>
 
 <ion-content>
   <ion-router-outlet></ion-router-outlet>
 </ion-content>
 
-<ion-tab-bar>
-  <ion-tab-button tab="home" href="/main/home">
-    <ion-icon name="home-outline"></ion-icon>
-    <ion-label>Inicio</ion-label>
-  </ion-tab-button>
+<app-tab-bar></app-tab-bar>
 
-  <ion-tab-button tab="security" href="/main/security">
-    <ion-icon name="shield-outline"></ion-icon>
-    <ion-label>Seguridad</ion-label>
-  </ion-tab-button>
-  
-  <ion-tab-button disabled="true">
-    <ion-icon name="search-outline"></ion-icon>
-    <ion-label>Buscar</ion-label>
-  </ion-tab-button>
-
-  <ion-tab-button disabled="true">
-    <ion-icon name="heart-outline"></ion-icon>
-    <ion-label>Favoritos</ion-label>
-  </ion-tab-button>
-</ion-tab-bar>
